--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.garbage_management" >
+    package="com.example.garbage_management">
 
     <application
         android:allowBackup="true"
@@ -8,16 +8,22 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Garbage_Management" >
+        android:theme="@style/Theme.Garbage_Management">
         <activity
-            android:name=".Edit_Work_Report"
+            android:name=".Text"
+            android:exported="false" />
+        <activity
+            android:name=".W_Repo"
             android:exported="false" />
         <activity
             android:name=".Work_Reports"
-            android:exported="false" />
+            android:exported="true" />
+        <activity
+            android:name=".Edit_Work_Report"
+            android:exported="true" />
         <activity
             android:name=".Home"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
